# spyctl

./: .gitignore  Cargo.toml  readme.md
old-go/: go.mod  go.sum
old-go/cmd/make/: main.go
old-go/cmd/master/: main.go
old-go/cmd/slave/: main.go
old-go/comms/: messages.go  slave.go
old-go/storage/: fs.go
old-go/surveillance/: screen.go  surveillance.go
src/: lib.rs
src/common/: messages.rs  mod.rs  util.rs
src/master/: comms.rs  mod.rs
src/master/tui/: app.rs  event.rs  handler.rs  tui.rs  ui.rs
src/slave/: comms.rs  mod.rs
src/slave/surveillance/: mod.rs  screen.rs  serialization.rs  sysinfo.rs
