[package]
name = "spyctl"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
image = "0.25.2"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
whoami = "1.5.2"
xcap = "0.0.14"
